# GebotMini

./: .gitignore  README.md
software/: CMakeLists.txt
software/UdpConnect/: CMakeLists.txt  keyboard.h  main.cpp  run.sh  udpsocket.cpp  udpsocket.h
software/fnn_model/: fc1.bias_weight.txt  fc1.weight_weight.txt  fc2.bias_weight.txt  fc2.weight_weight.txt  model.pth  qmodel.pth
software/include/: IMU.csv  adm_parameter.csv  data_Force.csv  data_IMU.csv  data_Torque.csv  file43_updated.csv  filtered_legtrace43.csv  imp_parameter.csv  inertiaInit.csv  inertiaInit2.csv  initPos.csv  legCmdPos.csv  legcmdpos.csv  legnopress.csv  recoverinswing.csv
software/include/INA219/: GestionI2C.h  GestionINA219.h  GestionPin.h  GestionPinGPIO.h
software/include/MotionControl/: MotionControl.txt  controlhelper.h  gebot.h  head.h  leg.h  robotcontrol.h  udpsocket.h  vibration.h
software/include/SVnPUMPnIMU/: ADS1x15.h  api.h  i2c.h
software/include/dynamixel/: dynamixel.h
software/src/: imutest.cpp  main.cpp  test.cpp  vibra.cpp
software/src/INA219/: GestionI2C.cpp  GestionINA219.cpp  GestionPin.cpp  GestionPinGPIO.cpp
software/src/MotionControl/: MotionControl.txt  controlhelper.cpp  gebot.cpp  gebot.txt  leg.cpp  robotcontrol.cpp
software/src/SVnPUMPnIMU/: ADS1x15.cpp  api.cpp  i2c.c
software/src/dynamixel/: dynamixel.cpp
testFolder/GeRot-master/API/dynamixel_cpp Ver2.0/src/: test.cpp
